# seren-neon-migrator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
aws/ec2/: build-ami.sh  cloudwatch-agent-config.json  setup-worker.sh  worker.sh
aws/lambda/: handler.py  provisioner.py
aws/terraform/: main.tf  variables.tf
docs/: aws-setup.md
docs/plans/: 20251121_remote_replication_1day.md
src/: interactive.rs  lib.rs  main.rs  utils.rs
src/commands/: init.rs  mod.rs  status.rs  sync.rs  validate.rs  verify.rs
src/migration/: checksum.rs  dump.rs  estimation.rs  mod.rs  restore.rs  schema.rs
src/mongodb/: converter.rs  mod.rs  reader.rs
src/postgres/: connection.rs  extensions.rs  mod.rs  privileges.rs
src/replication/: mod.rs  monitor.rs  publication.rs  subscription.rs
tests/: integration_remote_test.rs  integration_test.rs
