[package]
name = "postgres-seren-replicator"
version = "2.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Zero-downtime PostgreSQL replication tool to Seren with continuous sync and monitoring"
repository = "https://github.com/serenorg/postgres-seren-replicator"
readme = "README.md"
keywords = ["postgresql", "replication", "database", "migration", "cdc"]
categories = ["command-line-utilities", "database"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
tempfile = "3.8"
dialoguer = "0.11"
futures = "0.3"
indicatif = "0.18"
which = "6.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
rusqlite = "0.30"
base64 = "0.21"
mongodb = "2.8"
bson = "2.9"
